# wavecore-nl-tile

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: ci_generate_artifacts.sh  plot_xi_vs_j.py  quickstart.py  xi_weighted_demo.py
onnx/: controller.onnx
src/wavecore_nl/: cli.py  coherence.py  config.py  onnx_export.py  tile.py
tests/: test_config.py  test_tile.py  test_xi_weighted.py
